// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`betterer > should remove files from the cache when they are deleted 1`] = `
"{
  \\"version\\": 2,
  \\"testCache\\": {
    \\"test\\": {
      \\"src/file-1.ts\\": \\"3994602698153364047\\",
      \\"src/file-2.ts\\": \\"3994602698153364047\\"
    }
  }
}"
`;

exports[`betterer > should remove files from the cache when they are deleted 2`] = `
"{
  \\"version\\": 2,
  \\"testCache\\": {
    \\"test\\": {
      \\"src/file-1.ts\\": \\"3994602698153364047\\"
    }
  }
}"
`;

exports[`betterer > should remove files from the cache when they are deleted 3`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    \\"src/file-1.ts:153364047\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645651780\\"],
      [1, 0, 7, \\"RegExp match\\", \\"645651780\\"]
    ]
  }\`
};
"
`;

exports[`betterer > should remove files from the cache when they are deleted 4`] = `
"{
  \\"version\\": 2,
  \\"testCache\\": {
    \\"test\\": {
      \\"src/file-1.ts\\": \\"3994602698153364047\\"
    }
  }
}"
`;

exports[`betterer > should remove files from the cache when they are deleted 5`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    \\"src/file-1.ts:153364047\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645651780\\"],
      [1, 0, 7, \\"RegExp match\\", \\"645651780\\"]
    ]
  }\`
};
"
`;

exports[`betterer > should remove files from the cache when they are deleted 6`] = `
[
  "🌟 Betterer (-1ms):
",
  "🌟 Betterer (12ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (12ms): 1 test running...
✅ test: \\"test\\" got checked for the first time! (4 issues) 🎉
",
  "🎉 Betterer (45ms): 1 test done!
✅ test: \\"test\\" got checked for the first time! (4 issues) 🎉
",
  "🎉 Betterer (45ms): 1 test done!
✅ test: \\"test\\" got checked for the first time! (4 issues) 🎉

1 test got checked. 🤔
1 test got checked for the first time! 🎉
",
  "🌟 Betterer (-1ms):
",
  "🌟 Betterer (26ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (26ms): 1 test running...
✅ test: \\"test\\" got better! (2 fixed issues, 2 remaining) 😍
",
  "🎉 Betterer (29ms): 1 test done!
✅ test: \\"test\\" got better! (2 fixed issues, 2 remaining) 😍
",
  "🎉 Betterer (29ms): 1 test done!
✅ test: \\"test\\" got better! (2 fixed issues, 2 remaining) 😍

1 test got checked. 🤔
1 test got better! 😍
",
  "🌟 Betterer (-1ms):
",
  "🌟 Betterer (10ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (10ms): 1 test running...
🔥 test: \\"test\\" got worse. (2 new issues, 4 total) 😔
",
  "🌟 Betterer (10ms): 1 test running...
🔥 test: \\"test\\" got worse. (2 new issues, 4 total) 😔

Error: \\"test\\" got worse. (2 new issues, 4 total) 😔
",
  "💥 Betterer (37ms): 1 test done! 1 test errored!
🔥 test: \\"test\\" got worse. (2 new issues, 4 total) 😔
・ New issues in \\"<project>/fixtures/cache-deleted-file/src/file-2.ts\\"!
・ Showing first of 2 new issues:
・
・   <project>/fixtures/cache-deleted-file/src/file-2.ts
・ > 1 | // HACK:
・     | ^^^^^^^ RegExp match
・   2 | // HACK:
・

Error: \\"test\\" got worse. (2 new issues, 4 total) 😔
",
  "💥 Betterer (37ms): 1 test done! 1 test errored!
🔥 test: \\"test\\" got worse. (2 new issues, 4 total) 😔
・ New issues in \\"<project>/fixtures/cache-deleted-file/src/file-2.ts\\"!
・ Showing first of 2 new issues:
・
・   <project>/fixtures/cache-deleted-file/src/file-2.ts
・ > 1 | // HACK:
・     | ^^^^^^^ RegExp match
・   2 | // HACK:
・

Error: \\"test\\" got worse. (2 new issues, 4 total) 😔

1 test got checked. 🤔
1 test got worse. 😔

You should try to fix the new issues! As a last resort, you can run \`betterer --update\` to force an update of the results file. 🆙
",
]
`;
